[package]
name = "caseta_listener"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "caseta_listener"

[dependencies]
anyhow = "1.0.56"
async-trait = "0.1.53"
bytes = "1.1.0"
enum-display-derive = "0.1.1"
env_logger = "0.9.0"
futures = "0.3.17"
log = "0.4.14"
serde = "1.0.133"
serde_derive = "1.0.133"
serde_yaml = "0.8.23"
spectral = "0.6.0"
thiserror = "1.0.30"
tokio = {version = "1.15.0", features = ["full"]}
tracing = {version = "0.1", features = ["log"] }
tracing-bunyan-formatter = "0.3.2"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.11", features = ["registry", "env-filter"] }
uuid = {version  = "0.8.2", features = ["serde", "v4"] }
