[package]
name = "caseta_listener"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "caseta_listener"

[dependencies]
anyhow = "1.0.56"
async-trait = "0.1.53"
bytes = "1.1.0"
config = "0.13.1"
enum-display-derive = "0.1.1"
env_logger = "0.9.0"
futures = "0.3.17"
itertools = "0.10.5"
log = "0.4.14"
moka = { version = "0.9.4", features = ["future"] }
ordered-float = { version = "3.2.0", features = ["serde"] }
reqwest = { version = "0.11.11", features = ["json"]}
serde = "1.0.133"
serde_derive = "1.0.133"
serde_json = "1.0.83"
serde_yaml = "0.9.13"
spectral = "0.6.0"
thiserror = "1.0.30"
tokio = {version = "1.15.0", features = ["full"]}
tracing = {version = "0.1", features = ["log"] }
tracing-bunyan-formatter = "0.3.2"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.11", features = ["registry", "env-filter"] }
url = { version = "2.2.2", features = ["serde"] }
uuid = {version  = "1.1.2", features = ["serde", "v4"] }
