[package]
name = "caseta_listener"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "caseta_listener"

[dependencies]
anyhow = "1.0.56"
async-trait = "0.1.53"
bytes = "1.1.0"
config = {version = "0.13.1", features = ["yaml"]}
log = "0.4.14"
mini-moka = "0.10.0"
openssl = { version="0.10.45", features=["vendored"] }
ordered-float = { version="3.4.0", features=["std", "serde"]}
reqwest = { version = "0.11.11", features = ["json"]}
serde = "1.0.133"
serde_derive = "1.0.133"
serde_json = "1.0.83"
thiserror = "1.0.30"
tokio = {version = "1.15.0", features = ["full"]}
tracing = {version = "0.1", features = ["log"] }
tracing-bunyan-formatter = "0.3.2"
tracing-subscriber = { version = "0.3.11", features = ["registry", "env-filter"] }
typed-builder = "0.11.0"
url = { version = "2.2.2", features = ["serde"] }
uuid = {version  = "1.1.2", features = ["serde", "v4"] }

[dev-dependencies]
serde_yaml = "0.9.13"
spectral = "0.6.0"
